# entitybase-backend

./: .coverage.lenovo-x280.pid47439.XNKEpPYx.HF3vyHSFPeFh  .coverage.lenovo-x280.pid47442.XVWz4TLx.H6FiDbGTPybh  .coverage.lenovo-x280.pid47448.XXZKjN8x.HPKZb8qIvj5h  .coverage.lenovo-x280.pid47456.X1gmYACx.HrKe21OO1yyh  .coverage.lenovo-x280.pid47468.XbzjtB5x.HRjSE43rlCgh  .coverage.lenovo-x280.pid47474.XkOJKEDx.HfVbCmLw3Jnh  .coveragerc  .env  .env.example  .gitignore  .radon-allowlist.txt  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  ENDPOINTS.md  FAQ.md  FIXES_APPLIED.md  FIX_INTEGRATION_TESTS.md  INSTRUCTIONS.md  Makefile  OPENCODE-INSTRUCTIONS.md  README.md  RELEASE.md  STATISTICS.md  TEST_FIXES_SUMMARY.md  TODO.md  TODO_EntitybaseBase.md  VALUE_PROPOSITION.md  any-allowlist.txt  cast-allowlist.txt  check-docker-services.sh  check-longest-files.sh  clean-pyc.sh  cleanup_duplicates.py  codecov.yml  conftest.py  count-commits.sh  count-failing-tests.sh  count-tests.sh  (+117 more)
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
.opencode/: config.toml  safe-sh
.opencode/command/: commit.md  coverage.md  delete-failing-tests.md  ensure-endpoint-test-coverage.md  fix-failing-integration-tests.md  increase-coverage.md  increase-unit-test-coverage.md  instructions.md  integration-tests.md  lint-bot-loop.md  lint-top-loop.md  lint.md  mypy.md  test.md  tests.md  unit-tests.md  update-docs.md  verify-schema-compliance.md  vulture.md
.opencode/plans/: fix-coverage-plan.md  old_plan1.md  plan.md
.ralph-tui/: config.toml
ARCHITECTURE/: ARCHITECTURE-CHANGELOG.md  ARCHITECTURE.md  CACHING-STRATEGY.md  CHANGE-DETECTION-RDF-GENERATION.md  CONTINUOUS-RDF-CHANGE-STREAMER.md  ENTITY-MODEL.md  INTERNAL-REPRESENTATION.md  JSON-VALIDATION-STRATEGY.md  POST-PROCESSING-VALIDATION.md  S3-REVISION-SCHEMA-CHANGELOG.md  S3-REVISION-SCHEMA-EVOLUTION.md  SCHEMA-CHANGELOG.md  SCHEMA-EVOLUTION.md  STORAGE-ARCHITECTURE.md
debug/: README.md  debug.py  debug_Q1.py  debug_Q120248304.py  debug_Q120248304_comparison.txt  debug_Q120248304_generated.ttl  debug_Q17948861.py  debug_Q42.py  debug_dedupe.py  debug_q42.py  debug_q42_fixed.py
disabled_tests/: test_entity_to_ttl.py
doc/: FILE-OVERVIEW.md
doc/ARCHITECTURE/: API_MODELS.md  ARCHITECTURE-CHANGELOG.md  CONFIGURATION.md  DATABASE_SCHEMA.md  ENTITY-MODEL.md  REPOSITORIES.md  S3-STORAGE.md  SERVICES.md  STATEMENT-DEDUPLICATION.md  STORAGE-ARCHITECTURE.md  STORAGE-COST-ESTIMATIONS.md  WORKERS.md
doc/DIAGRAMS/: .png_cache.yaml  ARCHIVE_UNARCHIVE_PROCESS.md  DELETE_UNDELETE_PROCESS.md  ENTITY_UPDATE_PROCESS.md  ITEM_UPDATE_PROCESS.md  ITEM_WRITE_PROCESS.md  LOCK_UNLOCK_PROCESS.md  README.md  STATEMENT_PROCESSING_PATHS.md  component_relationships.puml  data_flow.puml  detailed_api_components.puml  detailed_data_flow.puml  detailed_infrastructure_components.puml  detailed_model_components.puml  detailed_service_components.puml  detailed_worker_components.puml  system_architecture.puml
doc/ECONOMIC-ESTIMATIONS/: VITESS-COST-ESTIMATION.md
doc/OPTIMIZATIONS/: PACKING.md
doc/RISK/: HASH-COLLISION.md
doc/WIKIDATA/: KUBERNETES-REQUIREMENTS.md  REVISION-CREATE.md
doc/diagrams/: ITEM_UPDATE_PROCESS.md  ITEM_WRITE_PROCESS.md
docker/: compose.mysql.yml  docker-compose.md  docker-compose.yml
docker/containers/: Dockerfile.api  Dockerfile.create-buckets  Dockerfile.create-tables  Dockerfile.create-topics  Dockerfile.dev-worker  Dockerfile.drop-worker  Dockerfile.dump-workers  Dockerfile.id-generator  Dockerfile.idworker  Dockerfile.incremental-rdf-worker  Dockerfile.json-worker  Dockerfile.purge-worker  Dockerfile.rest-api  Dockerfile.stats-workers  Dockerfile.tests  Dockerfile.ttl-worker  requirements-purge-worker.txt
docker/workers/: Dockerfile.id-generator
docs/: API.md  ENDPOINTS.md  FILE-OVERVIEW.md  GETTING_STARTED.md  GLOSSARY.md  PROJECT_STRUCTURE.md  QUICKREF.md  SETUP.md  TUTORIAL.md  VALUE_PROPOSITION.md  index.md  openapi.json
docs/API/: DATA_MODELS.md  ENTITIES.md  HEALTH.md  INTERACTIONS.md  ITEMS.md  LEXEMES.md  LIST.md  PROPERTIES.md  README.md  REDIRECTS.md  SETTINGS.md  STATEMENTS.md  STATISTICS.md  VERSION.md
docs/ARCHITECTURE/: API_MODELS.md  ARCHITECTURE-CHANGELOG.md  ARCHITECTURE.md  CACHING-STRATEGY.md  CONCEPTUAL-MODEL.md  CONFIGURATION.md  DATABASE_SCHEMA.md  ENTITY-MODEL.md  INCREMENTAL-RDF-UPDATER.md  MEDIAWIKI-INDEPENDENT-CHANGE-DETECTION.md  REPOSITORIES.md  S3-STORAGE.md  STORAGE-ARCHITECTURE.md  WEEKLY-RDF-DUMP-GENERATOR.md  WORKERS.md
docs/DIAGRAMS/: .png_cache.yaml  component_relationships.puml  data_flow.puml  detailed_api_components.puml  detailed_data_flow.puml  detailed_infrastructure_components.puml  detailed_model_components.puml  detailed_service_components.puml  detailed_worker_components.puml  index.md  system_architecture.puml
docs/ECONOMIC-ESTIMATIONS/: STORAGE-COST-ESTIMATIONS.md  (+1 more)
docs/api/: IMPORT.md  (+4 more)
draft/: STALE_ENTITIES.md
scripts/: AGENTS.md  basemodel_linter.py  check_logger_info.py  create_references_bucket.sh  custom_docstring_linter.py  download_entity_redirects.py  download_missing_entities.py  download_missing_entity_metadata.py  download_properties.sh  download_properties_sparql.py  download_property_metadata.py  extract_endpoints.py  generate-doc-tree.py  generate-tree.sh  generate_api_docs.py  generate_architecture_diagrams.py  generate_configuration_overview.py  generate_coverage_report.py  generate_database_schema_overview.py  generate_pngs.py  generate_repositories_overview.py  run-radon.py  size_estimation.py  size_estimation.txt  test_canonicalization.py  update-coverage-stats.py  update_all_tests.py  update_tests.py
src/: Dockerfile  PLAN.md  REST-API-PLAN.md  TREE.md
test_data/: AGENTS.md  README.md  simple_entity.json
tests/: AGENTS.md  Dockerfile  conftest.py  integration_test_live.py  test_app.py  test_datatype_normalization.py  test_entity_redirects.py  test_integration.py  test_lexeme_processing.py  test_parsers.py  test_raw_endpoint.py  test_statement_hasher.py  test_statements.py  test_vitess_client.py  validate_lexeme_deduplication.py
(+2851 files in other folders)
