[project]
name = "entitybase-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nizo Priskorn",email = "68460690+dpriskorn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.127.1,<0.128.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "boto3 (>=1.42.17,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "rapidhash (>=0.1.0,<0.2.0)",
    "rdflib (>=7.5.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
# We use a version of pytest that is compatible with pytest-asyncio
dev = [
    "pytest (>=8.2,<9.0)",
    "requests (>=2.32.0,<3.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "vulture (>=2.14,<3.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.vulture]
paths = ["src"]
exclude = ["tests"]
ignore_names = ["arbitrary_types_allowed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "src/models/rest_api/main.py"
warn_return_any = false
