[project]
name = "entitybase-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nizo Priskorn",email = "68460690+dpriskorn@users.noreply.github.com"}
]
readme = "README.md"
package-mode = "false"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.127.1,<0.128.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "boto3 (>=1.42.17,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "rapidhash (>=0.1.0,<0.2.0)",
    "rdflib (>=7.5.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "aiokafka (>=0.11.0,<1.0.0)",
    "pyld (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
# We use a version of pytest that is compatible with pytest-asyncio
dev = [
    "pytest (>=8.2,<9.0)",
    "pytest-cov (>=4.0.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)",
    "pytest-xdist (>=3.5.0,<4.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "vulture (>=2.14,<3.0)",
    "moto[s3] (>=5.0.0,<6.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "radon (>=6.0.1,<7.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
]

[tool.pytest.ini_options]
addopts = "-n auto --tb=short"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as e2e tests",
]

[tool.vulture]
paths = ["src"]
exclude = ["tests"]
ignore_names = ["arbitrary_types_allowed", "model_config"]
# Note: Vulture whitelist is configured in run-vulture.sh, not here

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src/models/rest_api/main.py"
warn_return_any = false

[tool.ruff]
# Max line length
line-length = 88

# Exclude test files from docstring requirements
exclude = ["tests/", "scripts/"]

[tool.ruff.lint]
# General rules to check: exclude docstring rules (handled by custom script)
select = []

# Optional: ignore private functions/methods
ignore = ["D105", "D106", "D107"]

[tool.ruff.lint.pydocstyle]
# Use Google style
# convention = "google"

[tool.ruff.lint.per-file-ignores]
# Skip docstring requirements for frozen models (data classes) and enums
# "src/models/**/*.py" = ["D101"]
